--- a/index.html
+++ b/index.html
@@ -52,11 +52,13 @@
             <label>&emsp;&emsp;&emsp; Preference</label> &emsp;
             <select class="travel" required>
               <option value="" disabled selected>--select--</option>
-              <option value="time">Time</option>
-              <option value="money">Money</option>
+              <option value="time">Time-Saving</option>
+              <option value="money">Money-Saving</option>
             </select><span class="space">&nbsp;</span>
             &emsp;&emsp;&emsp;&emsp;
-            <button class="search_bttn">Search Flights</button> &emsp;&emsp;&emsp; 
+            <br>
+            <button class="search_bttn">Search Flights</button> 
+            &emsp;&emsp;&emsp; 
             <button class="clear_bttn">Clear Search</button>
           </div>
         </div>
