--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <img src="plane.jpg"alt="plane"width="150px" height="20%">
     </nav>  -->
     <div class="booking-form-box">
+      <i class="fas fa-plane-departure"></i> <i> flyCom</i>
       <h1>Flight Booking</h1>
       <div class="main-body">
         <div class="values">
